--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"label": "rust: cargo build --release"
+			"label": "rust: cargo build"
 		}
 	]
 }
